# casescope

./: README.md  package-lock.json
app/chat/: chat-input-box.tsx  page.tsx
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: chat.py
backend/app/core/: config.py
backend/app/services/: agent.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/: chat-input-box.tsx  page.tsx
frontend/components/: intake-form.tsx
frontend/components/widgets/: .aggregated-data-table.tsx.swp  aggregated-data-table.tsx  data-table-by-issue.tsx
frontend/lib/: queries.ts
frontend/providers/: intake-form-store-provider.tsx
frontend/stores/: intake-form-store.tsx
